src/objects/Feature_Requested_Cancelled__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feature Requested Cancelled</relationshipLabel>
        <relationshipName>Feature_Requested_Cancelled</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charge_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Zuora_Id__c</fullName>
        <label>Charge Zuora Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Text__c</fullName>
        <label>Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>Subscription_Product_Charge__r.Zuora__BillingPeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Subscription_Product_Charge__r.Zuora__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name_Text__c</fullName>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <formula>Subscription_Product_Charge__r.Zuora__RatePlanName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; Subscription_Product_Charge__r.Zuora__Subscription__r.Sales_Rep__c, Subscription_Product_Charge__r.Zuora__Subscription__r.Sales_Rep__r.FirstName &amp; &quot; &quot; &amp; Subscription_Product_Charge__r.Zuora__Subscription__r.Sales_Rep__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested Cancelled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Product_Charge_Number__c</fullName>
        <label>Sub Product Charge Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sales_Rep__c</fullName>
        <label>Sub Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Term_End_Date__c</fullName>
        <label>Sub Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Term_Start_Date__c</fullName>
        <label>Sub Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Product &amp; Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Feature Requested Cancelled</relationshipLabel>
        <relationshipName>Feature_Requested_Cancelled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Requested_Cancelled</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Zuora_Id__c</fullName>
        <label>Subscription Zuora Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <formula>Subscription_Product_Charge__r.Zuora__Subscription__r.Zuora__TermEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <formula>Subscription_Product_Charge__r.Zuora__Subscription__r.Zuora__TermStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>CaseID + SubsProductChargeID</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora_Version__c</fullName>
        <label>Subscription Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feature Requested Cancelled</label>
    <nameField>
        <displayFormat>FRC-{00000}</displayFormat>
        <label>Feature Requested Cancelled Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Requested Cancelled</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>